--- a/1_introduction/3_objetivos.tex
+++ b/1_introduction/3_objetivos.tex
@@ -47,7 +47,7 @@ A partir del objetivo principal de esta tesis de evaluar a los estudiantes en el
 
 Basándonos en la metodologia DBR, introducida en los capítulos anteriores, se definirá un método que permita evaluar las competencias genéricas de los estudiantes a partir de su actividad en los entornos virtuales.
 
-\paragraph*{O2. Definir un DSL (\emph{Lenguaje Específico de Dominio}, del inglés, \emph{Domain-Specific Language}) que permita a los docentes investigar y diseñar estrategias de evaluación a partir de los registros contenidos en los entornos de aprendizaje virtual}
+\paragraph*{O2. Definir un DSL (\emph{Lenguaje Específico de Dominio}, del inglés, \emph{Domain-Specific Language}) que permita a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros contenidos en los entornos de aprendizaje virtual}
 
 Se definirán un conjunto de herramientas informáticas basadas en un DSL que implementen el método del objetivo O1 y que sea aplicable a diferentes entornos de virtuales de aprendizaje.
 
