--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -320,7 +320,7 @@ En la tabla~\ref{tab:CompetenciasGenericas} se muestran las competencias genéri
     \hline
     Trabajo autónomo & Capacidad para trabajar de forma autónoma~\cite{gonzalez2003tuning}. \\
     \hline
-    Trabajo en equipo & Trabajo realizado por un conjunto de personas en aras de un objetivo común~\cite{parker1990teamwork}. \\
+    Trabajo en equipo & Trabajo realizado por un conjunto de personas en aras de un objetivo común~\cite{dixon1992teamwork}. \\
     \hline
 \caption{Competencias genéricas}
 \label{tab:CompetenciasGenericas}
