--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -10,7 +10,7 @@
 @inproceedings{communique2012making,
   title={Making the most of our potential: Consolidating the European Higher Education Area},
   author={Communiqu{\'e}, Bucharest},
-  booktitle={EHEA Ministerial Conference. Retrieved May},
+  booktitle={European Higher Education Area Ministerial Conference},
   volume={16},
   pages={2012},
   year={2012}
@@ -239,7 +239,7 @@ year = {2012}
   volume={17},
   number={1},
   year={2008},
-  organization={sn}
+  organization={British Computer Society}
 }
 
 @article{malehorn1994ten,
@@ -290,7 +290,7 @@ author = "Leslie Borjas De Xena"
 @article{lasa2013problem,
   title={Problem Based Learning Implementation In The Degree Of Human Nutrition And Dietetics},
   author={Lasa, A and Txurruka, I and Sim{\'o}n, E and Miranda, J},
-  journal={ICERI2013 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2013},
   pages={1687--1692},
   year={2013},
   publisher={IATED}
@@ -318,7 +318,7 @@ author = "Leslie Borjas De Xena"
 @article{pinto2011assessment,
   title={Assessment Of Self-Criticism Capacity Competence In Higher Education Students: Outcome Oriented Education},
   author={Pinto, JJ and Arellano-Lopez, JM and Arufe-Martinez, MI and Barrera, MC and Caro, I and Castro, R and Coello, MD and Galindo, MD and Granado, MD and Gonz{\'a}lez, M and others},
-  journal={ICERI2011 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2011},
   pages={2032--2039},
   year={2011},
   publisher={IATED}
@@ -327,7 +327,7 @@ author = "Leslie Borjas De Xena"
 @article{renau2010teaching,
   title={Teaching And Learning Through Projects Using The ICT: Practice Of The English Writing Through Business Documents},
   author={Renau, ML Renau and Viciedo, J Us{\'o}},
-  journal={ICERI2010 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2010},
   pages={4700--4705},
   year={2010},
   publisher={IATED}
@@ -336,7 +336,7 @@ author = "Leslie Borjas De Xena"
 @article{marquez2010have,
   title={Have Our Future Entrepreneurs An Ethical Commitment?},
   author={M{\'a}rquez-Garc{\'\i}a, AM and Barreda-Tarrazona, R},
-  journal={ICERI2010 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2010},
   pages={5780--5789},
   year={2010},
   publisher={IATED}
@@ -450,7 +450,7 @@ author = "Leslie Borjas De Xena"
 @article{martin2013acquired,
   title={Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos},
   author={Mart{\'\i}n-Brice{\~n}o, MR and Prashar, S},
-  journal={ICERI2013 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2013},
   pages={4875--4878},
   year={2013},
   publisher={IATED}
@@ -459,7 +459,7 @@ author = "Leslie Borjas De Xena"
 @article{barbera2011assessment,
   title={Assessment tools for the evaluation of generic skills development in students of business management},
   author={Barber{\'a}, T and Estell{\'e}s, S and Dema, C and Devece, C},
-  journal={ICERI2011 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2011},
   pages={965--972},
   year={2011},
   publisher={IATED}
@@ -468,7 +468,7 @@ author = "Leslie Borjas De Xena"
 @article{martin2010new,
   title={New Methodologies In The Teaching And Evaluation Of The Competences “Teamwork” And “Oral And Written Communication” In The Civil Law Course Of The University Rey Juan Carlos},
   author={Mart{\'\i}n-Brice{\~n}o, MR and D{\'\i}az-Pardo, G and Prashar, S},
-  journal={ICERI2010 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2010},
   pages={4956--4961},
   year={2010},
   publisher={IATED}
@@ -477,7 +477,7 @@ author = "Leslie Borjas De Xena"
 @article{prashar2010competence,
   title={Competence Based Teaching And Evaluation In The General Chemistry Course Of The University Rey Juan Carlos},
   author={Prashar, S and Mart{\'\i}n-Brice{\~n}o, MR and D{\'\i}az-Pardo, G},
-  journal={ICERI2010 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2010},
   pages={4931--4935},
   year={2010},
   publisher={IATED}
@@ -506,7 +506,7 @@ author = "Leslie Borjas De Xena"
 @article{guenaga2013serious,
   title={Serious Games for the Development of Employment Oriented Competences},
   author={Guenaga, Mariluz and Arranz, Sonia and Rubio Florido, Isabel and Aguilar, Eduardo and Ortiz de Guinea, Alex and Rayon, Alex and Bezanilla, Mara Jose and Menchaca, Iratxe},
-  journal={IEEE Revista Iberoamericana de Tecnologias del Aprendizaje},
+  journal={IEEE Revista Iberoamericana de Tecnologías del Aprendizaje},
   volume={8},
   number={4},
   pages={176--183},
@@ -526,7 +526,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{ward2011developing,
   title={Developing entrepreneurial accounting and finance competency using the ELLEIEC Virtual Centre for Enterprise},
   author={Ward, Tim and Christophe, Saudemont},
-  booktitle={EAEEIE Annual Conference (EAEEIE), 2011 Proceedings of the 22nd},
+  booktitle={Proceedings of the 22nd European Association For Education In Electrical And Information Engineering Annual Conference (EAEEIE)},
   pages={1--5},
   year={2011},
   organization={IEEE}
@@ -602,7 +602,7 @@ author = "Leslie Borjas De Xena"
 @article{so2011mapping,
   title={Mapping The Impact On Holistic Development: A Study Of The Relationship Between Generic Skills And Academic Discipline Among Hong Kong Associate Degree Students},
   author={So, CHJ and Lai, SFH and Lam, D and So, YL},
-  journal={ICERI2011 Proceedings},
+  journal={Proceedings of the International Conference of Education, Research and Innovation (ICERI) 2011},
   pages={6630--6638},
   year={2011},
   publisher={IATED}
@@ -632,10 +632,10 @@ author = "Leslie Borjas De Xena"
 @inproceedings{rashid2008engineering,
   title={Engineering students performance evaluation of generic skills measurement: ESPEGS model},
   author={Rashid, Rozeha A and Abdullah, Razimah and Zaharim, Azami and Ghulman, Hamzah Ahmad and Masodi, Mohd Saidfudin and Mauri, JL and Zaharim, A and Kolyshkin, A and Hatziprokopiou, M and Lazakidou, A and others},
-  booktitle={WSEAS International Conference. Proceedings. Mathematics and Computers in Science and Engineering},
+  booktitle={Proceedings of the 5th WSEAS International Conference on Engineering Education (EE'08)},
   number={5},
   year={2008},
-  organization={WSEAS}
+  organization={World Scientific and Engineering Academy and Society (WSEAS)}
 }
 
 @article{a2007outcome,
@@ -757,7 +757,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{siemens2012learning,
   title={Learning analytics and educational data mining: towards communication and collaboration},
   author={Siemens, George and d Baker, Ryan SJ},
-  booktitle={Proceedings of the 2nd international conference on learning analytics and knowledge},
+  booktitle={Proceedings of the 2nd International Conference on Learning Analytics and Knowledge},
   pages={252--254},
   year={2012},
   organization={ACM}
@@ -803,11 +803,14 @@ author = "Leslie Borjas De Xena"
   publisher={Cambridge University Press}
 }
 
-@misc{parker1990teamwork,
-  title={WHAT IS TEAMWORK?},
-  author={Parker, Glenn},
-  year={1990},
-  publisher={Citeseer}
+@article{dixon1992teamwork,
+  title={What is teamwork?},
+  author={Dixon, HA},
+  journal={The Canadian Journal of Medical Radiation Technology/CAMRT},
+  volume={23},
+  number={2},
+  pages={79--80},
+  year={1992}
 }
 
 @book{gass2013second,
@@ -859,10 +862,11 @@ author = "Leslie Borjas De Xena"
   publisher={Secretariado de Recursos Audiovisuales y Nuevas Tecnolog{\'\i}as}
 }
 
-@article{munoz2003cuestionario,
+@misc{munoz2003cuestionario,
   title={El cuestionario como instrumento de investigaci{\'o}n/evaluaci{\'o}n},
   author={Mu{\~n}oz, Tom{\'a}s Garc{\'\i}a},
-  journal={Espanha: Almenjandrelo. Acedido em http://personal. telefonica. terra. es/web/medellinbadajoz/sociologia/ElCuestionario. pdf},
+  howpublished ={\url{http://cvonline.uaeh.edu.mx/Cursos/Maestria/MTE/Gen02/seminario_de_tesis/Unidad_4_anterior/Lect_El_Cuestionario.pdf}},
+  note = {Accessed: 2016-05-01}
   year={2003}
 }
 % Fin listado de competencias
@@ -879,7 +883,7 @@ author = "Leslie Borjas De Xena"
   title={La prueba escrita},
   author={Rojas-Vargas, Andrea},
   year={2008},
-  publisher={Ministerio de Educación Pública. Dirección de desarrollo curricular. Departamento de Evaluación de los Aprendizajes}
+  publisher={Ministerio de Educaci{\'o}n P{\'u}blica. Dirección de desarrollo curricular. Departamento de Evaluaci{\'o}n de los Aprendizajes}
 }
 
 @book{oates2006researching,
@@ -1227,7 +1231,7 @@ author = "Leslie Borjas De Xena"
 @article{laurillard2012teaching,
   title={Teaching as a design science},
   author={Laurillard, Diana},
-  journal={building pedagogical patterns for learning and technology},
+  journal={Building pedagogical patterns for learning and technology},
   year={2012},
   publisher={Routledge London}
 }
@@ -1252,8 +1256,8 @@ author = "Leslie Borjas De Xena"
 
 @article{conde2015exploring,
   title={Exploring Software Engineering Subjects by Using Visual Learning Analytics Techniques},
-  author={Conde, Miguel A and Garcia-Penalvo, Francisco J and Gomez-Aguilar, Diego-Alonso and Theron, Roberto},
-  journal={Tecnologias del Aprendizaje, IEEE Revista Iberoamericana de},
+  author={Conde, Miguel A and García-Peñalvo, Francisco J and Gómez-Aguilar, Diego-Alonso and Theron, Roberto},
+  journal={IEEE Revista Iberoamericana de Tecnologías del Aprendizaje},
   volume={10},
   number={4},
   pages={242--252},
@@ -1273,7 +1277,7 @@ author = "Leslie Borjas De Xena"
 }
 
 @article{midoro2013guidelines,
-  title={Guidelines on adaptation of the UNESCO ICT Competency Framework for Teachers},
+  title={Guidelines on adaptation of the {UNESCO ICT} Competency Framework for Teachers},
   author={Midoro, Vittorio},
   year={2013},
   publisher={UNESCO Institute for Information Technologies in Education}
