--- a/dissertation.tex
+++ b/dissertation.tex
@@ -38,7 +38,7 @@
 
 
 % Title of the dissertation
-\title{Evaluación de competencias genéricas basada en indicadores procedentes de registros de actividades de aprendizaje.}
+\title{Evaluación de competencias genéricas basada en indicadores procedentes de registros de actividades de aprendizaje}
 
 
 % ----------------------------------------------------------------------
@@ -47,7 +47,7 @@
 \crest{\includegraphics[width=2cm]{UCA_Shield}}
 % Full logo
 %\crest{\includegraphics[width=6cm]{UDeusto}}
-\university{Universidad de Cádiz}
+\university{Escuela Superior de Ingeniería}
 \degree{Tesis doctoral presentada por }
 \author{Antonio Balderas Alberico} 
 \collegeordept{dentro del Programa Oficial de Doctorado en Ingeniería y Arquitectura (8104)}
